fixed squashed images

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -149,6 +149,7 @@ footer {
   height: 185px;
   @media screen and (max-width: $break) {
     width: 6em;
+    height: auto;
   }
 }
 .course-time {
